// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserServices should return a failed authorized user on an unexpected response: failed authorized user: unexpected 1`] = `
Object {
  "message": "{ auth.getUser, getUserPermissions } = insights.chrome",
  "status": 418,
}
`;

exports[`UserServices should return a failed authorized user on empty response: failed authorized user: empty object 1`] = `
Object {
  "message": "{ auth.getUser, getUserPermissions } = insights.chrome",
  "status": 418,
}
`;

exports[`UserServices should return a failed authorized user: failed authorized user 1`] = `
Object {
  "message": "{ getUser } = insights.chrome.auth, insights.chrome.auth.getUser is not a function",
  "status": 418,
}
`;

exports[`UserServices should return a specific locale cookie value 1`] = `
Object {
  "data": Object {
    "key": "English",
    "value": "en-US",
  },
}
`;

exports[`UserServices should return a successful authorized user: success authorized user 1`] = `
Object {
  "data": Object {
    "permissions": Array [],
    "user": Object {
      "identity": Object {
        "account_number": "0",
        "type": "User",
      },
    },
  },
  "message": "{ auth.getUser, getUserPermissions } = insights.chrome",
  "status": 200,
}
`;

exports[`UserServices should return default locale if no locale cookie is present 1`] = `
Object {
  "data": Object {
    "key": "English",
    "value": "en-US",
  },
}
`;

exports[`UserServices should return the default locale with an invalid ISO_639 code 1`] = `
Object {
  "data": Object {
    "key": "English",
    "value": "en-US",
  },
}
`;
